--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,8 @@
   <meta name="theme-color" content="#fafaff">
 </head>
 
-<body>
+<body id="root">
 
-  <div id="root"></div>
   <script src="index.tsx" type="module"></script>
 
 
