leave method, css

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#fafaff">
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body id="root">
